# disasm-lib

./: .gitignore  .gitmodules  CMakeLists.txt  compile_flags.txt
include/: disasm-lib.h  disasm.h  types.h
internal/: arm_decoder.h  core.h  shift_ops.h  thumb_decoder.h
src/: arm_decoder.c  constants.c  instruction_builder.c  main.c  shift_ops.c  thumb_decoder.c
tests/: CMakeLists.txt  alu_decoder_tests.c  builder_tests.c  coprocessor_tests.c  macro_tests.c  memory_decoding_tests.c  multiply_decoding_tests.c  psr_tests.c  run_tests  selector_tests.c  test_macros.h  test_main.c  test_runner.c  thumb_decoder_tests.c
